sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:11: error: ';' expected but 'false' found.
      if(plusPetit(i,i+1))==false){
                            ^AlgBubbleSort1:16: error: ';' expected but 'if' found.
    }if(cpt==0){
     ^